# Armon-Kokkos

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  detect_simd_size.cmake  run_kokkos.jl
src/: CMakeLists.txt  armon.cpp  armon_2D.cpp  armon_2D.h  cmp_cpp_jl.cpp  cmp_cpp_jl_1D.cpp  data.h  double_reducer.h  indexing.cpp  indexing.h  io.cpp  io.h  kernel_info.cpp  kernel_info.h  main_2D.cpp  parameters.cpp  parameters.h  ranges.cpp  ranges.h  utils.h
src/kernels/: CMakeLists.txt  acoustic.cpp  common.h  double_reducer.h  euler_projection.cpp  fluid_eos.cpp  halo_exchange.cpp  indexing.cpp  indexing.h  init_test.cpp  kernels.h  limiters.h  parallel_kernels.h  reductions.cpp  test_cases.h  utils.cpp  utils.h
tests/: CMakeLists.txt  armon_2D_tests.cpp  reference.cpp  reference.h
